Refactor CORS and Security configuration for improved handling and security
- Simplified CorsConfig by removing WebMvcConfigurer and implementing a dedicated CORS configuration source.
- Enhanced CORS handling to support wildcard origins and improved method and header configurations.
- Updated SecurityConfig to include method security, configure security headers, and streamline authorization for public endpoints.